--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 # BlueJ files
 *.ctxt
 
-# Mobile Tools for Java (J2ME)
+# Mobile com.krzysztgac.forestfire.tools for Java (J2ME)
 .mtj.tmp/
 
 # Package Files #
